--- a/src/app/componente/inicio/inicio.component.html
+++ b/src/app/componente/inicio/inicio.component.html
@@ -1,6 +1,9 @@
 <div class="row">
   <div class="text-center my-5">
-    <img class="img_mia rounded-circle" src="assets/img/foto.png">
+    <div class="img">
+      <img class="img_mia rounded-circle" src="/src/assets/img/foto.png" alt="">
+    </div>
+    
 
     <div class="container col-8 my-3">
       <div class="accordion" id="accordionExample">
