--- a/src/app/componente/inicio/inicio.component.html
+++ b/src/app/componente/inicio/inicio.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="text-center my-5">
     <div class="img">
-      <img class="img_mia rounded-circle" src="/src/assets/img/foto.png" alt="">
+      <img class="img_mia rounded-circle" src="assets/img/foto.png" alt="">
     </div>
     
 
